[tool.poetry]
name = "pdcrier"
version = "0.1.0"
description = ""
authors = ["Joe Block <jpb@unixorn.net>"]

[tool.poetry.dependencies]
python = "^3.9"
pyaml = "^21.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
